<resources>
    <string name="app_name">Shoe Store</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_user">Welcome, %s!</string>
    <string name="navigate_instructions">Please click below and navigate to the instructions screen</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_list">Shoe List</string>
    <string name="navigate_shoe_list">Please click below to navigate to the Shoe List</string>
    <string name="instructions_add">Click the add button on the next screen to create a new shoe model</string>
    <string name="add_button">Add button</string>
    <string name="shoe_size">Size: %s</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size_add">Shoe Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>