<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.shoes.ShoeDetailFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/layout_spacing" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/layout_spacing" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_shoe_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_spacing"
                android:hint="@string/shoe_name"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_shoe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_company"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_half_spacing"
                android:hint="@string/company"
                app:layout_constraintEnd_toEndOf="@id/til_shoe_name"
                app:layout_constraintStart_toStartOf="@id/til_shoe_name"
                app:layout_constraintTop_toBottomOf="@id/til_shoe_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_shoe_size"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_half_spacing"
                android:hint="@string/shoe_size_add"
                app:layout_constraintEnd_toEndOf="@id/til_company"
                app:layout_constraintStart_toStartOf="@id/til_company"
                app:layout_constraintTop_toBottomOf="@id/til_company">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_shoe_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_half_spacing"
                android:hint="@string/description"
                app:layout_constraintEnd_toEndOf="@id/til_shoe_size"
                app:layout_constraintStart_toStartOf="@id/til_shoe_size"
                app:layout_constraintTop_toBottomOf="@id/til_shoe_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_double_spacing"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="@id/til_description"
                app:layout_constraintStart_toStartOf="@id/til_description"
                app:layout_constraintTop_toBottomOf="@id/til_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_half_spacing"
                android:text="@android:string/cancel"
                app:layout_constraintEnd_toEndOf="@id/btn_save"
                app:layout_constraintStart_toStartOf="@id/btn_save"
                app:layout_constraintTop_toBottomOf="@id/btn_save" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>